--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="./manifest.json">
     <link rel="shortcut icon" href="imgs/tycoonworldicon.png" type="image/png">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DR2BW0WW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-20DR2BW0WW');
+    </script>
 </head>
 <body>
     <canvas id="tobgameenginecanvas"></canvas>
