--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="./manifest.json">
     <link rel="shortcut icon" href="imgs/tycoonworldicon.png" type="image/png">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DR2BW0WW"></script>
+    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DR2BW0WW"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -16,9 +19,11 @@
         gtag('config', 'G-20DR2BW0WW');
     </script>
 </head>
+
 <body>
     <canvas id="tobgameenginecanvas"></canvas>
     <script src="engine.js"></script>
-    <script src="index.js"></script>   
+    <script src="index.js"></script>
 </body>
+
 </html>
