Added Google Analytics code snipped#3

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-20DR2BW0WW');
+        gtag('config', 'G-20DR2BW0WW', { 'debug_mode':true });
     </script>
 </head>
 
