changed tiltle + changed engine error msgs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tycoon World</title>
+    <title>Idle World</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="./manifest.json">
     <link rel="shortcut icon" href="imgs/tycoonworldicon.png" type="image/png">
