fixed wrong img path (folder name changed)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Idle World</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="./manifest.json">
-    <link rel="shortcut icon" href="imgs/tycoonworldicon.png" type="image/png">
+    <link rel="shortcut icon" href="imgs/idleworldicon.png" type="image/png">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DR2BW0WW"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DR2BW0WW"></script>
