engine now supports clearonunload+moved sc.loaders

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DR2BW0WW"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DR2BW0WW"></script>
+    <!--Scene scripts-->
+    <script src="scenes/map.js"></script>
+    <script src="scenes/bank.js"></script>
+
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
