--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="manifest" href="./manifest.json">
     <link rel="shortcut icon" href="imgs/idleworldicon.png" type="image/png">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DR2BW0WW"></script>
+    <meta name="mobile-web-app-capable" content="yes">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DR2BW0WW"></script>
     <!--Scene scripts-->
