--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!--Scene scripts-->
     <script src="scenes/map.js"></script>
     <script src="scenes/bank.js"></script>
+    <script src="scenes/hqmenu.js"></script>
 
     <script>
         window.dataLayer = window.dataLayer || [];
