Added some meta attributes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="shortcut icon" href="imgs/idleworldicon.png" type="image/png">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DR2BW0WW"></script>
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="description" content="TobCrafts Webside - The Idle World game (mainly mobile)">
+    <meta name="keywords"
+        content="JavaScript,Gaming,Game Development,Coding,TobCraft,TobCraft3521,Webside,Idle World">
+    <meta name="author" content="TobCraft3521">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DR2BW0WW"></script>
     <!--Scene scripts-->
