automatically unloading scenes if no parameter

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DR2BW0WW"></script>
     <!--Scene scripts-->
     <script src="scenes/map.js"></script>
-    <script src="scenes/bank.js"></script>
+    <script src="scenes/menu.js"></script>
     <script src="scenes/hqmenu.js"></script>
 
     <script>
